<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blackish"
    android:id="@+id/main_constraint_layout"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/name"
        android:layout_width="345dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/type_your_name"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/lastName"
        android:layout_width="345dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/type_your_last_name"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name" />

    <Spinner
        android:id="@+id/spn_gender"
        android:layout_width="199dp"
        android:layout_height="48dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:entries="@array/genders"
        android:popupBackground="@color/blackish"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.484"
        app:layout_constraintStart_toEndOf="@+id/lbl_gender"
        app:layout_constraintTop_toBottomOf="@+id/lastName" />

    <TextView
        android:id="@+id/lbl_gender"
        android:layout_width="115dp"
        android:layout_height="48dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:text="@string/lbl_gender"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lastName" />

    <TextView
        android:id="@+id/lbl_date"
        android:layout_width="115dp"
        android:layout_height="48dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:text="@string/lbl_fecha_nacimiento"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lbl_gender" />

    <TextView
        android:id="@+id/birthday"
        android:layout_width="115dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/icon_calendar"
        app:layout_constraintHorizontal_bias="0.787"
        app:layout_constraintStart_toEndOf="@+id/lbl_date"
        app:layout_constraintTop_toBottomOf="@+id/spn_gender" />

    <ImageView
        android:id="@+id/icon_calendar"
        style="@style/Widget.AppCompat.ActionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:contentDescription="logo"
        android:src="@drawable/baseline_calendar_today_white_18dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spn_gender" />

    <TextView
        android:id="@+id/lbl_programming"
        android:layout_width="208dp"
        android:layout_height="42dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:text="@string/lbl_programming"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lbl_date" />

    <RadioGroup
        android:id="@+id/radio_group_prog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:layout_marginEnd="16dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/lbl_programming"
        app:layout_constraintTop_toBottomOf="@+id/birthday">

        <RadioButton
            android:id="@+id/radio_yes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="#FFFFFF"
            android:checked="true"
            android:text="@string/si"
            android:textColor="#FFFFFF" />

        <RadioButton
            android:id="@+id/radio_no"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="#FFFFFF"
            android:text="@string/no"
            android:textColor="#FFFFFF" />

    </RadioGroup>

    <TextView
        android:id="@+id/id_languages"
        android:layout_width="108dp"
        android:layout_height="36dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:text="@string/lbl_lenguajes"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lbl_programming" />

    <CheckBox
        android:id="@+id/cbx_java"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="12dp"
        android:buttonTint="#FFFFFF"
        android:text="@string/java"
        android:textColor="#FFFFFF"
        app:layout_constraintStart_toEndOf="@+id/id_languages"
        app:layout_constraintTop_toBottomOf="@+id/lbl_programming" />

    <CheckBox
        android:id="@+id/cbx_python"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:buttonTint="#FFFFFF"
        android:text="@string/python"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.462"
        app:layout_constraintStart_toEndOf="@+id/cbx_java"
        app:layout_constraintTop_toBottomOf="@+id/radio_group_prog" />

    <CheckBox
        android:id="@+id/cbx_c_sharp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:buttonTint="#FFFFFF"
        android:text="@string/c"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.217"
        app:layout_constraintStart_toEndOf="@+id/cbx_c"
        app:layout_constraintTop_toBottomOf="@+id/cbx_go" />

    <CheckBox
        android:id="@+id/cbx_go"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:buttonTint="#FFFFFF"
        android:text="@string/go"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.419"
        app:layout_constraintStart_toEndOf="@+id/cbx_js"
        app:layout_constraintTop_toBottomOf="@+id/cbx_python" />

    <CheckBox
        android:id="@+id/cbx_js"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="188dp"
        android:buttonTint="#FFFFFF"
        android:text="@string/js"
        android:textColor="#FFFFFF"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cbx_java" />

    <CheckBox
        android:id="@+id/cbx_c"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="188dp"
        android:buttonTint="#FFFFFF"
        android:text="@string/c_c"
        android:textColor="#FFFFFF"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cbx_js" />

    <LinearLayout
        android:layout_width="384dp"
        android:layout_height="63dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:orientation="horizontal"
        android:weightSum="3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cbx_c">

        <Button
            android:id="@+id/btn_send"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.495"
            android:text="@string/send" />

        <View
            android:layout_width="1dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.1" />

        <Button
            android:id="@+id/btn_clean"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.495"
            android:text="@string/clean" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>